[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qassem-drbdtools"
version = "0.1.0"
description = "Professional DRBD management and Linux infrastructure toolkit by Qassem."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kasem Adra"}]
keywords = ["drbd", "linux", "infrastructure", "automation", "qassem"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
qdrbd = "qdrbdtools.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
