[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qassem-drbdtools"
version = "0.1.0"
description = "Professional DRBD management and Linux infrastructure toolkit by Qassem."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kasem Adra" }
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[project.scripts]
qdrbd = "qdrbdtools.cli:main"

[tool.setuptools]
packages = ["qdrbdtools"]
